<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:text="Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"/>
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:text="Document number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"/>
        <EditText
            android:id="@+id/etDocumentNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/save" />


    </RelativeLayout>

    <ToggleButton
        android:id="@+id/assistant"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textOff="@string/service_disabled"
        android:textOn="@string/service_enabled"
        app:layout_constraintBottom_toTopOf="@+id/storage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/storage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textOff="@string/missing_permission_can_t_access_screenshots"
        android:textOn="@string/storage_access_permission_granted"
        app:layout_constraintBottom_toTopOf="@+id/preview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assistant" />

    <ToggleButton
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textOff="@string/previews_disabled"
        android:textOn="@string/previews_enabled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storage" />

</LinearLayout>
